# cli

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  build.rs  dist-workspace.toml  schema.json
.cargo/: config.toml
.github/workflows/: ci.yml  publish-brew.yml  publish-deno.yml  publish-npm.yml  release.yml
examples/: curlpit.json  example.env  httpbin-get2.curl
src/: config.rs  env.rs  executor.rs  importer.rs  interactive.rs  lib.rs  main.rs  parser.rs  template.rs
src/config/: environment.rs  loader.rs  mod.rs
src/env/: loader.rs  mod.rs  placeholders.rs
src/executor/: mod.rs  models.rs  printer.rs  runner.rs  writer.rs
src/importer/: curl_parser.rs  headers.rs  manual.rs  mod.rs  model.rs  substitutions.rs
src/parser/: mod.rs  model.rs  reader.rs
src/template/: js_fetch.rs  mod.rs
src/web/: mod.rs
tests/: basic.rs  cli.rs
