[package]
name = "curlpit"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/curlpit-sh/cli"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream", "multipart", "native-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
inquire = "0.6"
thiserror = "1.0"
futures-util = "0.3"
indicatif = "0.17"
url = "2"
once_cell = "1.19"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
petname = "1.1"
notify = "6.1"
shell-words = "1.1"

curl-parser = { version = "0.6", default-features = false }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
